objects/Batch_Delete_Inputs__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>This is for batch apex,BatchCls_DeleteSObjects, that delete the record based on the inputs</description>
    <fields>
        <fullName>Age_in_Days__c</fullName>
        <inlineHelpText>Mention the Age in Days</inlineHelpText>
        <label>Age (in Days)</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Child_Filter_Date_Field__c</fullName>
        <label>Child Filter Date Field</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Child_Object_Field_API__c</fullName>
        <inlineHelpText>Provide the field API name</inlineHelpText>
        <label>Child Object Field API</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Child_Object_Field_Value__c</fullName>
        <inlineHelpText>Provide the field value, Ex: &apos;Closed&apos;</inlineHelpText>
        <label>Child Object Field Value</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Child_Object__c</fullName>
        <label>Child Object</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email_Body_of_Report__c</fullName>
        <defaultValue>&apos;Dear Administrator, The batch has been successfully executed. Please find the report of cases which emails have been archived here: https://c2s--dnd.cs8.my.salesforce.com/00OE0000002vE83 Regards, SFDC Team.&apos;</defaultValue>
        <inlineHelpText>Please include the report link in the body</inlineHelpText>
        <label>Email Body of Report</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Email_For_Notifications__c</fullName>
        <defaultValue>&apos;jpcooney@te.com&apos;</defaultValue>
        <inlineHelpText>Please specify the email ids comma seperated, ex: abc@te.com,def@te.com</inlineHelpText>
        <label>Email For Notifications</label>
        <required>true</required>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Filter_Child_Object_Records__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Filter Child Object Records</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Filter_Parent_Records__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Filter Parent Records</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Minimum_threshhold__c</fullName>
        <label>Minimum threshhold [DO NOT CHANGE]</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Parent_Filter_Date_Field__c</fullName>
        <inlineHelpText>Please mention the date field API which is considered for age calculations, Eg: &apos;ClosedDate&apos; for Case-Email deletion.</inlineHelpText>
        <label>Parent Filter Date Field</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parent_Filter_Field_API__c</fullName>
        <inlineHelpText>Provide the field API name</inlineHelpText>
        <label>Parent Filter Field API</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parent_Filter_Field_Value__c</fullName>
        <inlineHelpText>Provide the field value, Ex: &apos;Closed&apos;</inlineHelpText>
        <label>Parent Filter Field Value</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parent_Record_Types__c</fullName>
        <defaultValue>&apos;All&apos;</defaultValue>
        <inlineHelpText>Please mention &apos;All&apos; for all record types or mention different record types with comma separated</inlineHelpText>
        <label>Parent Record Types (Comma separated)</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parent__c</fullName>
        <inlineHelpText>Provide Object API name</inlineHelpText>
        <label>Parent Object</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <label>Batch Delete Inputs</label>
</CustomObject>